# poleshift

./: .env  .gitattributes  .gitignore  .prettier.cjs  README.md  eslint.config.js  index.html  krakenuniq.entitlements  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poleshifttauridev.provisionprofile  postcss.config.js  snapcraft.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: crab_nebula.yml  tauri_publish.yml  test_build.yml
apps/poleshift-app/: .gitignore  .prettierignore  .prettierrc  LICENSE  package.json  tsconfig.json  vite.config.ts
apps/poleshift-site/: package.json
plotlyTypes/: plotly-types.ts
public/: splashscreen.html
public/@powersync/: _journeyapps_wa-sqlite-_journeyapps_wa-sqlite_src_examples_IDBBatchAtomicVFS_js-async-mutex-c-3cff7d0.index.umd.js  _journeyapps_wa-sqlite-_journeyapps_wa-sqlite_src_examples_IDBBatchAtomicVFS_js-async-mutex-c-3cff7d0.index.umd.js.map  _journeyapps_wa-sqlite-_journeyapps_wa-sqlite_src_examples_IDBBatchAtomicVFS_js-async-mutex-c-3cff7d1.index.umd.js  _journeyapps_wa-sqlite-_journeyapps_wa-sqlite_src_examples_IDBBatchAtomicVFS_js-async-mutex-c-3cff7d1.index.umd.js.map  index.umd.js  index.umd.js.map
scripts/: sync-versions.mjs
src/: .env  App-new.css  App.css  App.tsx  index.tsx  main.tsx  preload.d.ts  theme.ts  updater.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/capabilities/: default.json  default.toml  desktop.json  mobile.json  splashscreen.toml
src-tauri/icons/: .VolumeIcon.icns  icon.icns
src-tauri/resources/: checksum  database.idx  database.kdb  database.kdb.counts  taxdb_config.toml
src-tauri/resources/krakenuniq-bin/: build_taxdb-aarch64-apple-darwin  classify-aarch64-apple-darwin  classify-x86-64-unknown-linux-gnu  classifyExact-aarch64-apple-darwin  classifyExact-x86-64-unknown-linux-gnu  classifyExact-x86_64-apple-darwin  classifyExact-x86_64-unknown-linux-gnu  count_unique-aarch64-apple-darwin  db_shrink-aarch64-apple-darwin  db_sort-aarch64-apple-darwin  dump_taxdb-aarch64-apple-darwin  krakenuniq-build-aarch64-apple-darwin  krakenuniq-filter-aarch64-apple-darwin  krakenuniq-mpa-report-aarch64-apple-darwin  krakenuniq-report-aarch64-apple-darwin  krakenuniq-translate-aarch64-apple-darwin  query_taxdb-aarch64-apple-darwin  read_uid_mapping-aarch64-apple-darwin  set_lcas-aarch64-apple-darwin
src-tauri/resources/krakenuniq-database/: kudb.tar.xz
src-tauri/src/: build_taxonomy_hierarchy.rs  db_manager.rs  handle_ctd_data.rs  handle_nutrient_ammonia.rs  handle_paired_end_sequence_data.rs  handle_sequence_data.rs  kraken_uniq_manager.rs  lib.rs  list_resource_files.rs  main.rs  process_sidebar_stats.rs  supabase_connector.rs
src-tauri/src/chat/: mod.rs
src-tauri/src/io/: fastq.rs  fastqgz.rs  mod.rs
src-tauri/src/krakenuniq/: handle_sequence_data.rs  mod.rs  parse_fastq_files.rs  parse_kraken_uniq_report.rs  parse_stdout.rs
src-tauri/src/poleshift_common/: types.rs  utils.rs
src-tauri/src/splashscreen/: mod.rs
src/components/: CheckResourceFiles.tsx  ContextMenu.tsx  DataChart.tsx  DnaLoadingIcon.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  FilterMenu.tsx  GlobeComponent.tsx  LocationFields.tsx  MainApp.tsx  Modal.tsx  NutrientAmmoniaView.tsx  OfflineWarning.tsx  ResetComponent.tsx  RightSidebar.tsx  SampleGroupMetadata.tsx  SampleGroupMetadataComponent.tsx  UploadQueueStatus.tsx
src/config/: dropboxConfig.ts
src/contexts/: AuthContext.tsx  DataContext.tsx  ProcessedDataContext.tsx  UIContext.tsx
src/hooks/: index.ts  useAuth.ts  useData.ts  useFileTreeData.ts  useLocations.ts  useNetworkStatus.ts  useProcessedData.ts  useSettings.ts  useSyncProgress.ts  useTauriDataProcessor.ts  useUI.ts
src/lib/: index.ts  init.ts
src/old_contexts/: AuthContext.tsx  ProcessedDataContext.tsx
src/old_contexts_old_old/: DataContext.tsx
src/old_hooks/: useAuth.ts  useData.ts  useFileTreeData.ts
src/old_hooks_old_old/: useLocations.ts  useOnlineStatus.ts  useUI.ts  (+1 more)
supabase/: config.toml
(+299 files in other folders)
