[package]
name = "poleshift"
version = "0.1.5"
description = "Research Application"
authors = ["Nikolas Yanek-Chrones"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "poleshift_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = ["default", "unstable", "devtools"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
rusqlite = { version = "0.32.1", features = ["bundled"] }
uuid = "1.3.2"
chrono = "0.4.39"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tauri-plugin-process = "2"
rayon = "1.10.0"
regex = "1.11.1"
flate2 = "1.0.35"
krakenuniq-rs = "0.0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"
