[package]
name = "poleshift"
version = "0.1.11"
description = "Research Application"
authors = ["Nikolas Yanek-Chrones"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "poleshift_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.1", features = ["default", "unstable", "devtools", "config-toml"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
uuid = "1.3.2"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
thiserror = "2.0.11"
rayon = "1.10.0"
flate2 = "1.0.35"
krakenuniq-rs = "0.0.4"
tauri-plugin-http = "2"
tauri-plugin-upload = "2"
reqwest = "0.12.12"
futures-util = "0.3.31"
sha2 = "0.10.8"
hex = "0.4.3"
openssl = "0.10.68"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.33.0", features = ["bundled"] }
